--- a/style.css
+++ b/style.css
@@ -2,4 +2,45 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+ 
+}
+header{
+  text-align: center;
+}
+nav{
+  text-align: center;
+}
+
+nav a{
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: wheat;
+}
+
+img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 900px;
+  
+}
+figcaption{
+  font-size: 14px;
+  text-align: center;
+}
+#featured-property p{
+  padding-top: 5px;
+  padding-bottom: 5px;
+  width: 800px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+#details div{
+  float: left;
+  background-color: beige;
+  width: 25%;
+  text-align: center;
+
 }
